# python-discord-api

./: .env.sample  README.md  pyproject.toml
src/discord_api/: main.py
