[tool.poetry]
name = "discord_api"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
discord-api = "discord_api.main:main"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
